feat: add translations to causes page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,7 +6,8 @@
       "donationModalButtonText": "Continue",
       "confirmModalTitle": "Confirm your donation",
       "confirmModalPrimaryButtonText": "Confirm",
-      "confirmModalSecondaryButtonText": "Cancel"
+      "confirmModalSecondaryButtonText": "Cancel",
+      "donateText": "Donate"
     }
   }
 }
