--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -11,5 +11,9 @@
       "pageTitle": "Causas",
       "pageSubtitle": "Doe de graça para uma causa de sua escolha"
     }
+  },
+  "donationInProcess": {
+    "animationText": "Doando...",
+    "impactText": "Os apoiadores da Ribon são os responsáveis pelo pagamento das doações gratuitas"
   }
 }
