style: adds title and subtitle to donationDonePage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,11 @@
       "donateText": "Donate",
       "pageTitle": "Causes",
       "pageSubtitle": "Donate for free for a cause of your choice"
+    },
+    "donationDonePage": {
+      "title": "Thank you for your donation!",
+      "subtitle": "1 day of pet food for rescued animals",
+      "button": "Finish"
     }
   }
 }
