feat: add translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,7 +14,9 @@
     "donationDonePage": {
       "title": "Thank you for your donation!",
       "subtitle": "1 day of pet food for rescued animals",
-      "button": "Finish"
+      "button": "Finish",
+      "ngoTitle": "About Amor em Patas",
+      "ngoInformation": "Amor em Patas is an organization that aims to rescue abandoned animals, take care of them and seek adoption."
     },
     "donationInProcess": {
       "animationText": "Donating...",
