--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -2,7 +2,7 @@
   "donations": {
     "causesPage": {
       "donationModalTitle": "Doe de graça!",
-      "donationModalBody": "Escolha uma causa e mande uma doação patrocinada pelos apoiadores da Ribon.",
+      "donationModalBody": "Use seus tickets diários para fazer doações a serem patrocinadas pelos apoiadores da Ribon.",
       "donationModalButtonText": "Continuar",
       "confirmModalTitle": "Confirme sua doação",
       "confirmModalPrimaryButtonText": "Confirmar",
