--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,7 +12,10 @@
       "pageSubtitle": "Donate for free for a cause of your choice",
       "errorModalTitle": "Process failed",
       "errorModalText": "It was not possible to finish this action. Please, check your internet connection and try again.",
-      "errorModalButtonText": "Ok"
+      "errorModalButtonText": "Ok",
+      "blockedModalTitle": "Donation blocked",
+      "blockedModalText": "This account has already used it’s daily donation ticket. Come back tomorrow!",
+      "blockedModalButtonText": "Ok"
     },
     "donationDonePage": {
       "title": "Thank you for your donation!",
