--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -13,8 +13,8 @@
       "errorModalTitle": "Falha no processo",
       "errorModalText": "Não foi possível concluir esta ação. Por favor verifique sua conexão com a internet e tente novamente.",
       "errorModalButtonText": "Ok",
-      "blockedModalTitle": "Doação bloqueada",
-      "blockedModalText": "Essa conta já usou seu ticket de doação diário. Volte amanhã!",
+      "blockedModalTitle": "Bloqueado",
+      "blockedModalText": "Esta conta já usou seu vale doação diário. Volte amanhã para doar novamente!",
       "blockedModalButtonText": "Ok"
     },
     "donationDonePage": {
