--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,7 +4,7 @@
       "donationModalTitle": "Doe de graça!",
       "donationModalBody": "Use seus tickets diários para fazer doações a serem patrocinadas pelos apoiadores da Ribon.",
       "donationModalButtonText": "Continuar",
-      "confirmModalTitle": "Confirme sua doação",
+      "confirmModalTitle": "Insira seu e-mail para usar seu vale doação",
       "confirmModalPrimaryButtonText": "Confirmar",
       "confirmModalSecondaryButtonText": "Cancelar",
       "donateText": "Doar",
@@ -12,7 +12,15 @@
       "pageSubtitle": "Doe de graça para uma causa de sua escolha",
       "errorModalTitle": "Falha no processo",
       "errorModalText": "Não foi possível concluir esta ação. Por favor verifique sua conexão com a internet e tente novamente.",
-      "errorModalButtonText": "Ok"
+      "errorModalButtonText": "Ok",
+      "modalForm": {
+        "footerStartText": "Ao inserir seu e-mail e se inscrever, você aceita os",
+        "footerAnd": "e",
+        "useTermsText": "Termos de Serviço",
+        "privacyPolicyText": "Política de Privacidade",
+        "privacyPolicyLink": "https://blog.ribon.io/2017/12/20/politica-de-privacidade/",
+        "useTermsLink": "https://blog.ribon.io/2021/07/12/termos-e-condicoes-de-uso-da-ribon/"
+      }
     },
     "donationDonePage": {
       "title": "Obrigada pela sua doação!",
