--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -5,6 +5,7 @@
       "donationModalBody": "Use seus tickets diários para fazer doações a serem patrocinadas pelos apoiadores da Ribon.",
       "donationModalButtonText": "Continuar",
       "confirmModalTitle": "Insira seu e-mail para usar seu vale doação",
+      "confirmModalAuthTitle": "Confirmar doação",
       "confirmModalPrimaryButtonText": "Confirmar",
       "confirmModalSecondaryButtonText": "Cancelar",
       "donateText": "Doar",
