--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -25,5 +25,8 @@
       "animationText": "Doando...",
       "impactText": "Os apoiadores da Ribon são os responsáveis pelo pagamento das doações gratuitas"
     }
+  },
+  "impactPage": {
+    "title": "Impacto"
   }
 }
