feat: adds impactText translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,6 +27,8 @@
     }
   },
   "impactPage": {
-    "title": "Impact"
+    "title": "Impact",
+    "subtitle": "You used {{ticketsUsed}} tickets",
+    "impactText": "You donated {{impact}}"
   }
 }
