--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -27,6 +27,7 @@
     }
   },
   "impactPage": {
-    "title": "Impacto"
+    "title": "Impacto",
+    "subtitle": "Você usou {{ticketsUsed}} tickets"
   }
 }
