feat: adds translation for button and text-pt

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -28,6 +28,8 @@
   },
   "impactPage": {
     "title": "Impacto",
-    "subtitle": "Você usou {{ticketsUsed}} tickets"
+    "subtitle": "Você usou {{ticketsUsed}} tickets",
+    "impactText": "Você doou {{impact}}",
+    "button": "Ver mais"
   }
 }
