--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,6 +29,7 @@
   "impactPage": {
     "title": "Impact",
     "subtitle": "You used {{ticketsUsed}} tickets",
-    "impactText": "You donated {{impact}}"
+    "impactText": "You donated {{impact}}",
+    "button": "Show more"
   }
 }
