fix: adjusts button translation

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -30,6 +30,6 @@
     "title": "Impacto",
     "subtitle": "Você usou {{ticketsUsed}} tickets",
     "impactText": "Você doou {{impact}}",
-    "button": "Ver mais"
+    "button": "Ver todos"
   }
 }
