feat: add translation to ChangeLanguageItem menu text

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,5 +38,12 @@
       "impactTitle": "Impact",
       "causesPageTitle": "Causes"
     }
+  },
+  "layouts": {
+    "layoutHeader": {
+      "changeLanguageItem": {
+        "changeLanguageText": "Change language"
+      }
+    }
   }
 }
