--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -38,5 +38,12 @@
       "impactTitle": "Impacto",
       "causesPageTitle": "Causas"
     }
+  },
+  "layouts": {
+    "layoutHeader": {
+      "changeLanguageItem": {
+        "changeLanguageText": "Alterar idioma"
+      }
+    }
   }
 }
