feat: add blocked button condition to donate

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -9,6 +9,7 @@
       "confirmModalPrimaryButtonText": "Confirmar",
       "confirmModalSecondaryButtonText": "Cancelar",
       "donateText": "Doar",
+      "donateBlockedText": "Bloqueado",
       "pageTitle": "Causas",
       "pageSubtitle": "Doe de graça para uma causa de sua escolha",
       "errorModalTitle": "Falha no processo",
