--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,6 +9,7 @@
       "confirmModalPrimaryButtonText": "Confirm",
       "confirmModalSecondaryButtonText": "Cancel",
       "donateText": "Donate",
+      "donateBlockedText": "Blocked",
       "pageTitle": "Causes",
       "pageSubtitle": "Donate for free for a cause of your choice",
       "errorModalTitle": "Process failed",
