feat: adds sign out translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,6 +43,9 @@
     "layoutHeader": {
       "changeLanguageItem": {
         "changeLanguageText": "Change language"
+      },
+      "LogOutItem": {
+        "logoutButton": "Sign Out"
       }
     }
   }
