--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -43,6 +43,9 @@
     "layoutHeader": {
       "changeLanguageItem": {
         "changeLanguageText": "Alterar idioma"
+      },
+      "LogOutItem": {
+        "logoutButton": "Sair"
       }
     }
   }
