fix: renames logOutItem to logoutItem

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -44,7 +44,7 @@
       "changeLanguageItem": {
         "changeLanguageText": "Change language"
       },
-      "LogOutItem": {
+      "LogoutItem": {
         "logoutButton": "Sign Out"
       }
     }
