fix: fixes translation name

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -44,7 +44,7 @@
       "changeLanguageItem": {
         "changeLanguageText": "Change language"
       },
-      "LogoutItem": {
+      "logoutItem": {
         "logoutButton": "Sign Out"
       }
     }
