feat: add FundPage title and translations

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -59,5 +59,10 @@
         "successModalButton": "Fechar"
       }
     }
+  },
+  "promoters": {
+    "fundPage": {
+      "title": "Fundo"
+    }
   }
 }
