--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -59,5 +59,10 @@
         "successModalButton": "Ok"
       }
     }
+  },
+  "promoters": {
+    "fundPage": {
+      "title": "Fund"
+    }
   }
 }
