feat: add subtitle to FundPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -62,7 +62,8 @@
   },
   "promoters": {
     "fundPage": {
-      "title": "Fund"
+      "title": "Fund",
+      "subtitle": "Help charities by funding donation tickets"
     }
   }
 }
