--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -62,7 +62,8 @@
   },
   "promoters": {
     "fundPage": {
-      "title": "Fundo"
+      "title": "Fundo",
+      "subtitle": "Ajuda instituições patrocinando tickets de doação"
     }
   }
 }
