feat: add SectionTitle

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -63,7 +63,8 @@
   "promoters": {
     "fundPage": {
       "title": "Fund",
-      "subtitle": "Help charities by funding donation tickets"
+      "subtitle": "Help charities by funding donation tickets",
+      "fundBalance": "Fund balance"
     }
   }
 }
