--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -64,7 +64,8 @@
     "fundPage": {
       "title": "Fund",
       "subtitle": "Help charities by funding donation tickets",
-      "fundBalance": "Fund balance"
+      "fundBalance": "Fund balance",
+      "fundSupportButtonText": "Support the fund"
     }
   }
 }
