feat: add WalletLayout

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -58,6 +58,9 @@
         "successModalTitle": "Você saiu da sua conta",
         "successModalButton": "Fechar"
       }
+    },
+    "walletLayout": {
+      "connectWallet": "Conectar"
     }
   },
   "promoters": {
