--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -58,6 +58,9 @@
         "successModalTitle": "Signed out successfully",
         "successModalButton": "Ok"
       }
+    },
+    "walletLayout": {
+      "connectWallet": "Connect"
     }
   },
   "promoters": {
