feat: add fund to menu

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -39,8 +39,9 @@
       "impactText": "Ribon’s supporters are those responsible for paying for the free donations"
     },
     "menu":{
-      "impactTitle": "Impact",
-      "causesPageTitle": "Causes"
+      "impactPageTitle": "Impact",
+      "causesPageTitle": "Causes",
+      "fundPageTitle": "Fund"
     }
   },
   "layouts": {
