--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -39,8 +39,9 @@
       "impactText": "Os apoiadores da Ribon são os responsáveis pelo pagamento das doações gratuitas"
     },
     "menu":{
-      "impactTitle": "Impacto",
-      "causesPageTitle": "Causas"
+      "impactPageTitle": "Impacto",
+      "causesPageTitle": "Causas",
+      "fundPageTitle": "Fundo"
     }
   },
   "layouts": {
