--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -62,7 +62,7 @@
   "impactPage": {
     "title": "Impact",
     "subtitle": "You used {{ticketsUsed}} tickets",
-    "impactText": "You donated {{impact}}",
+    "impactText": "You donated ",
     "button": "Show more",
     "noImpactText": "Your donation impact summary will be shown here",
     "noImpactButton": "Donate now"
