fix: adds dynamic title to donation done pg

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,7 +31,7 @@
       "title": "Thank you for your donation!",
       "subtitle": "1 day of pet food for rescued animals",
       "button": "Finish",
-      "ngoTitle": "About Amor em Patas",
+      "ngoTitle": "About ",
       "ngoInformation": "Amor em Patas is an organization that aims to rescue abandoned animals, take care of them and seek adoption."
     },
     "donationInProcess": {
