--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -31,7 +31,7 @@
       "title": "Obrigada pela sua doação!",
       "subtitle": "1 dia de ração para animais resgatados",
       "button": "Terminar",
-      "ngoTitle": "Sobre Amor em Patas",
+      "ngoTitle": "Sobre ",
       "ngoInformation": "Amor em Patas é uma organização que tem como objetivo resgatar animais abandonados, cuidar deles e buscar adoção."
     },
     "donationInProcess": {
