feat: add SupportFundPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -78,6 +78,10 @@
       "subtitle": "Help charities by funding donation tickets",
       "fundBalance": "Fund balance",
       "fundSupportButtonText": "Support the fund"
+    },
+    "supportFundPage": {
+      "title": "Support the Fund",
+      "button": "Confirm giving"
     }
   }
 }
