feat: add Subtitle to SupportFundPage

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -77,6 +77,11 @@
       "subtitle": "Ajuda instituições patrocinando tickets de doação",
       "fundBalance": "Balanço do Fundo",
       "fundSupportButtonText": "Ajudar o fundo"
+    },
+    "supportFundPage": {
+      "title": "Ajude o Fundo",
+      "subtitle": "Quanto você quer contribuir?",
+      "button": "Confirmar doação"
     }
   }
 }
