--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -81,6 +81,7 @@
     },
     "supportFundPage": {
       "title": "Support the Fund",
+      "subtitle": "How much do you want to give?",
       "button": "Confirm giving"
     }
   }
