--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -81,7 +81,8 @@
     "supportFundPage": {
       "title": "Ajude o Fundo",
       "subtitle": "Quanto você quer contribuir?",
-      "button": "Confirmar doação"
+      "button": "Confirmar doação",
+      "networkText": "*Certifique-se de conectar sua carteira à rede da Polygon."
     }
   },
   "contexts": {
