--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -82,7 +82,8 @@
     "supportFundPage": {
       "title": "Support the Fund",
       "subtitle": "How much do you want to give?",
-      "button": "Confirm giving",
+      "buttonText": "Confirm giving",
+      "disabledButtonText": "Enter any USDC amount",
       "networkText": "*Make sure your wallet is set up to the Polygon network."
     }
   },
