feat: add toast to transaction success and refetch balance on event

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -84,7 +84,8 @@
       "subtitle": "How much do you want to give?",
       "buttonText": "Confirm giving",
       "disabledButtonText": "Enter any USDC amount",
-      "networkText": "*Make sure your wallet is set up to the Polygon network."
+      "networkText": "*Make sure your wallet is set up to the Polygon network.",
+      "transactionSuccessText": "Transaction successful"
     }
   },
   "contexts": {
