--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -83,7 +83,8 @@
       "subtitle": "Quanto você quer contribuir?",
       "buttonText": "Confirmar doação",
       "disabledButtonText": "Insira uma quantidade de USDC",
-      "networkText": "*Certifique-se de conectar sua carteira à rede da Polygon."
+      "networkText": "*Certifique-se de conectar sua carteira à rede da Polygon.",
+      "transactionSuccessText": "Transação processada"
     }
   },
   "contexts": {
