--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -76,7 +76,8 @@
       "title": "Fundo",
       "subtitle": "Ajuda instituições patrocinando tickets de doação",
       "fundBalance": "Balanço do Fundo",
-      "fundSupportButtonText": "Ajudar o fundo"
+      "fundSupportButtonText": "Ajudar o fundo",
+      "givingsTitle": "Suas contribuições"
     },
     "supportFundPage": {
       "title": "Ajude o Fundo",
