--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -77,7 +77,13 @@
       "title": "Fund",
       "subtitle": "Help charities by funding donation tickets",
       "fundBalance": "Fund balance",
-      "fundSupportButtonText": "Support the fund"
+      "fundSupportButtonText": "Support the fund",
+      "subtitleGivings": "Your givings",
+      "firstGivingButtonText": "Give now",
+      "firstGivingText": "Make your first giving",
+      "givingsCarousel": {
+         "linkTransactionText": "See transaction"
+      }
     },
     "supportFundPage": {
       "title": "Support the Fund",
