--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -76,7 +76,13 @@
       "title": "Fundo",
       "subtitle": "Ajuda instituições patrocinando tickets de doação",
       "fundBalance": "Balanço do Fundo",
-      "fundSupportButtonText": "Ajudar o fundo"
+      "fundSupportButtonText": "Ajudar o fundo",
+      "subtitleGivings": "Suas contribuições",
+      "firstGivingButtonText": "Contribua agora",
+      "firstGivingText": "Faça sua primeira doação",
+      "givingsCarousel": {
+        "linkTransactionText": "Ver transação"
+      }
     },
     "supportFundPage": {
       "title": "Ajude o Fundo",
