feat: add insufficientBalanceText

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -84,6 +84,7 @@
       "subtitle": "How much do you want to give?",
       "buttonText": "Confirm giving",
       "disabledButtonText": "Enter any USDC amount",
+      "insufficientBalanceText": "Insufficient USDC balance",
       "networkText": "*Make sure your wallet is set up to the Polygon network.",
       "usdcBalanceText": "USDC balance: {{balance}}",
       "transactionSuccessText": "Transaction successful"
