feat: add loadingOverlayContext to app

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -92,7 +92,9 @@
       "insufficientBalanceText": "Insufficient USDC balance",
       "networkText": "*Make sure your wallet is set up to the Polygon network.",
       "usdcBalanceText": "USDC balance: {{balance}}",
-      "transactionSuccessText": "Transaction successful"
+      "transactionSuccessText": "Transaction successful",
+      "tokenAmountTransferMessage": "Approving token amount transfer...",
+      "contractTransferMessage": "Transferring to contract..."
     }
   },
   "contexts": {
