feat: adds processing toast to supportFundPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -103,6 +103,7 @@
       "transactionSuccessText": "Transaction successful",
       "tokenAmountTransferMessage": "Approving token amount transfer...",
       "contractTransferMessage": "Transferring to contract...",
+      "transactionOnBlockchainText": "Your transaction is being processed",
       "givingsPage": {
         "title": "Your Givings"
       }
